<resources>
    <string name="app_name">The Movie DB</string>
    <string name="welcome_message">Добро пожаловать!</string>
    <string name="login_message">Укажите логин и пароль, которые вы использовали для входа</string>
    <string name="placeholder_login">Логин</string>
    <string name="placeholder_password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="ok_string">ОК</string>
    <string name="error_login_or_password">Неверный логин или пароль</string>
    <string name="error_login">Что-то пошло не так,  попробуйте войти позже</string>
    <string name="start_message_pin_code">Придумайте пин-код для быстрого входа</string>
    <string name="repeat_message_pin_code">Повторите  ваш пин-код</string>
    <string name="error_message_pin_code">Неверный пин-код</string>
    <string name="exit_button">Выйти</string>
    <string name="title_films">Фильмы</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_user">Профиль</string>
    <string name="not_found_films_message">По вашему запросу ничего\n не найдено :(</string>
    <string name="favorite_films_title">Избранное</string>
    <string name="not_found_favorite_films_message">Вы не добавили ни одного фильма</string>
    <string name="found_favorite_films_message">Найти любимые фильмы</string>
    <string name="rating_film_message">Рейтинг фильма</string>
    <string name="add_favorite_menu_item_title">Добавить в избранное</string>
    <string name="not_found_overview">Описание отсутствует</string>
    <string name="menu_item_search_title">Поиск</string>
    <string name="menu_item_recycler_view_form_title">Вид отображения</string>
    <string name="not_found_films_among_favorites">Ничего не найдено</string>

    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="api_key">f974b8f49d7e213fe108f60a32c0aac7</string>
    <string name="gravatar_url">https://www.gravatar.com/avatar/%1$s?s=%2$d</string>
    <string name="poster_url">http://image.tmdb.org/t/p/w342/%1$s</string>
    <string name="search_language">ru-RU</string>
</resources>