<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        tools:visibility="invisible">

        <SearchView
            android:id="@+id/search_favorites_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:closeIcon="@drawable/ic_delete_search"
            android:orientation="horizontal"
            android:searchIcon="@drawable/ic_search"
            android:theme="@style/AppSearchView">

        </SearchView>

        <ImageButton
            android:id="@+id/recycler_view_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            app:srcCompat="@drawable/ic_card_24px" />
    </LinearLayout>

    <TextView
        android:id="@+id/favorites_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/favorite_films_title"
        android:textAppearance="@style/LightTextStyle"
        android:textSize="32sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_favorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/not_found_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/not_found_favorites_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:text="@string/not_found_favorite_films_message"
            android:textAppearance="@style/LightTextStyle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/found_films_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/found_favorite_films_message"
            android:textColor="@color/purpure_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/not_found_favorites_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/ic_favorites_not_found" />
    </LinearLayout>

</LinearLayout>