<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black_color"
    tools:context=".login.ui.PinCodeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="144dp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="328dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="TextView"
            android:textAppearance="@style/LightTextStyle"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />


        <TextView
            android:id="@+id/pin_message"
            android:layout_width="264dp"
            android:layout_height="64dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:text="@string/start_message_pin_code"
            android:textAppearance="@style/LightTextStyle"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="152dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <View
            android:id="@+id/first_number_circle"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/small_circle" />

        <View
            android:id="@+id/second_number_circle"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/small_circle" />

        <View
            android:id="@+id/third_number_circle"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/small_circle" />

        <View
            android:id="@+id/fourth_number_circle"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/small_circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_message_pin_code"
        android:layout_width="264dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/error_message_pin_code"
        android:textAppearance="@style/ErrorTextStyle"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message_pin_code">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/number_1"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="1" />

            <Button
                android:id="@+id/number_2"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="2" />

            <Button
                android:id="@+id/number_3"
                style="@style/NumberButton"
                android:text="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/number_4"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="4" />

            <Button
                android:id="@+id/number_5"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="5" />

            <Button
                android:id="@+id/number_6"
                style="@style/NumberButton"
                android:text="6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/number_7"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="7" />

            <Button
                android:id="@+id/number_8"
                style="@style/NumberButton"
                android:layout_marginEnd="8dp"
                android:text="8" />

            <Button
                android:id="@+id/number_9"
                style="@style/NumberButton"
                android:text="9" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:text="@string/exit_button"
            android:textAppearance="@style/InactiveButtonText" />

        <Button
            android:id="@+id/number_0"
            style="@style/NumberButton"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:text="0" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background= "@null"
            app:srcCompat="@drawable/ic_icon_backspace_24px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>